--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ http://www.templatemo.com/free-website-templates/417-grill
                         <div class="col-md-3 col-sm-3 col-xs-6">
                             <div class="blog-post">
                                 <div class="blog-thumb">
-                                    <img src="images/Slice2.png" alt="" />
+                                    <img src="images/slice2.png" alt="" />
                                 </div>
                                 <div class="blog-content">
                                     <div class="content-show">
