--- a/dc.html
+++ b/dc.html
@@ -5,14 +5,12 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <!-- 
 
-Grill Template 
 
-http://www.templatemo.com/free-website-templates/417-grill
 
 -->
     <head>
         <meta charset="utf-8">
-        <title>Products - Grill Template</title>
+        <title>Developers-Crest</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         
@@ -21,8 +19,8 @@ http://www.templatemo.com/free-website-templates/417-grill
         <link rel="stylesheet" href="css/mycss.css">
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/templatemo_style.css">
-        <link rel="stylesheet" href="css/templatemo_misc.css">
+        <link rel="stylesheet" href="css/dctemplate_style.css">
+        <link rel="stylesheet" href="css/dctemplate_misc.css">
         <link rel="stylesheet" href="css/flexslider.css">
         <link rel="stylesheet" href="css/testimonails-slider.css">
 
@@ -39,14 +37,14 @@ http://www.templatemo.com/free-website-templates/417-grill
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="home-account">
-                                    <a href="#">Home</a>
-                                    <a href="#">My account</a>
+                                    <a href="index.html">Home</a>
+
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="cart-info">
                                     <i class="fa fa-shopping-cart"></i>
-                                    (<a href="#">5 items</a>) in your cart (<a href="#">$45.80</a>)
+                                    (<a href="#">1 items</a>) in your cart (<a href="#">K1000.00</a>)
                                 </div>
                             </div>
                         </div>
