--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ http://www.templatemo.com/free-website-templates/417-grill
 -->
     <head>
         <meta charset="utf-8">
-        <title>Grill Responsive Web Template</title>
+        <title>Company name restaurant web template</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width">
         
@@ -21,8 +21,8 @@ http://www.templatemo.com/free-website-templates/417-grill
         <link rel="stylesheet" href="css/css1.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/font-awesome.css">
-        <link rel="stylesheet" href="css/templatemo_style.css">
-        <link rel="stylesheet" href="css/templatemo_misc.css">
+        <link rel="stylesheet" href="css/dctemplate_style.css">
+        <link rel="stylesheet" href="css/dctemplate_misc.css">
         <link rel="stylesheet" href="css/flexslider.css">
         <link rel="stylesheet" href="css/testimonails-slider.css">
         <script src="js/vendor/modernizr-2.6.1-respond-1.1.0.min.js"></script>
