--- a/dc.html
+++ b/dc.html
@@ -54,7 +54,7 @@
             </header>
 
 <div >
- <img class="justify-content-center img-responsive" src="images/dc.png" alt="">
+ <img class="justify-content-center img-responsive" src="images/dc.webp" alt="">
 
 </div >
 
